--- a/demos/index.html
+++ b/demos/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/print.css" media="print" />
 <link rel="shortcut icon" href="img/favicon.png" />
 <!--[if lt IE 9]>
-<script src="http://cdn.staticfile.org/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="http://cdn.staticfile.org/es5-shim/4.0.3/es5-shim.min.js"></script>
 <![endif]-->
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
