--- a/demos/posfixed.html
+++ b/demos/posfixed.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/posfixed.css">
 <!--[if lt IE 9]>
 <script src="http://cdn.staticfile.org/es5-shim/4.0.3/es5-shim.min.js"></script>
+<script src="http://cdn.staticfile.org/json2/20140204/json2.min.js"></script>
 <![endif]-->
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
@@ -51,6 +52,7 @@ seajs.config({
 2<br>
 2<br>
 2<br>
+<hr style="width: 5000px;">
 <label>
 	<input type="checkbox">
 	fixed
