--- a/demos/posfixed.html
+++ b/demos/posfixed.html
@@ -26,7 +26,7 @@ seajs.config({
 </script>
 </head>
 <body>
-<hr style="width: 5000px;">
+<hr>
 <label>
 	<input type="checkbox">
 	fixed
@@ -112,5 +112,6 @@ seajs.config({
 2<br>
 2<br>
 2<br>
+<div class="test">tttt</div>
 </body>
 </html>
