--- a/demos/supports.html
+++ b/demos/supports.html
@@ -4,6 +4,21 @@
 <title>supports demo</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/supports.css">
+<!--[if lt IE 9]>
+<script src="http://cdn.staticfile.org/es5-shim/4.0.3/es5-shim.min.js"></script>
+<script src="http://cdn.staticfile.org/json2/20140204/json2.min.js"></script>
+<![endif]-->
+<script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
+<script src="../build/css3.js"></script>
+<script> 
+seajs.config({
+	alias: {
+		jquery: "http://cdn.staticfile.org/jquery/1.11.0-rc1/jquery.min.js"
+	},
+	debug: true,
+	base: "../build/"
+}).use(["jquery", "supports"]);
+</script>
 </head>
 <body>
 	<div class="test">
