--- a/demos/matchmedia.html
+++ b/demos/matchmedia.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>matchmedia demo</title>
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
-<script> 
+<script>
 seajs.config({
-	alias: {
-		jquery: "http://cdn.staticfile.org/jquery/1.11.0-rc1/jquery.min.js"
-	},
 	debug: true,
 	base: "../build/"
 }).use(["stylefix", "matchmedia"], function(jQuery, StyleFix, PrefixFree) {
