--- a/demos/posfixed.html
+++ b/demos/posfixed.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
-<link rel="stylesheet" type="text/css" href="css/posfixed.css">
-<!--[if lt IE 9]>
-<script src="http://cdn.staticfile.org/es5-shim/4.0.3/es5-shim.min.js"></script>
-<script src="http://cdn.staticfile.org/json2/20140204/json2.min.js"></script>
-<![endif]-->
+<title>supports demo</title>
+<link rel="stylesheet" href="css/posfixed.css">
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
-<script> 
+<script>
 seajs.config({
-	alias: {
-		jquery: "http://cdn.staticfile.org/jquery/1.11.0-rc1/jquery.min.js"
-	},
 	debug: true,
 	base: "../build/"
 }).use(["jquery", "posfixed"], function() {
