CSS.supports("(transform: rotate(7deg))");

--- a/demos/supports.html
+++ b/demos/supports.html
@@ -14,7 +14,7 @@
 seajs.config({
 	debug: true,
 	base: "../build/"
-}).use(["jquery", "supports"]);
+}).use(["jquery", "prefixfree", "supports"]);
 </script>
 </head>
 <body>
