issues#4 css rest fn

--- a/demos/matchmedia.html
+++ b/demos/matchmedia.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <title>matchmedia demo</title>
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
