--- a/demos/posfixed.html
+++ b/demos/posfixed.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>supports demo</title>
+<meta charset="utf-8">
+<title>posfixed demo</title>
 <link rel="stylesheet" href="css/posfixed.css">
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
 <script src="../build/css3.js"></script>
