use edge doc mode

--- a/demos/placeholder.html
+++ b/demos/placeholder.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <title>placeholder demo</title>
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
