--- a/demos/index.html
+++ b/demos/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/print.css" media="print" />
