--- a/demos/matchmedia.html
+++ b/demos/matchmedia.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <title>matchmedia demo</title>
 <script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
@@ -10,7 +12,7 @@ seajs.config({
 	debug: true,
 	base: "../build/"
 }).use(["stylefix", "matchmedia"], function(jQuery, StyleFix, PrefixFree) {
-		var mql = window.matchMedia('screen and (color) and (orientation: landscape) and (min-width: 600px) and (min-height: 400px)');
+	var mql = window.matchMedia('screen and (color) and (orientation: landscape) and (min-width: 600px) and (min-height: 400px)');
 	console.log(mql);
 	/*
 		mql has the following properties:
