--- a/demos/supports.html
+++ b/demos/supports.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <title>supports demo</title>
 <link rel="stylesheet" href="css/supports.css">
