--- a/demos/imageset.html
+++ b/demos/imageset.html
@@ -16,6 +16,6 @@ seajs.config({
 </script>
 </head>
 <body>
-
+<img srcset="http://mat1.gtimg.com/www/images/qq2012/qqlogo_1x.png 1x, http://mat1.gtimg.com/www/images/qq2012/qqlogo_2x.png 2x">
 </body>
 </html>
