--- a/demos/imageset.html
+++ b/demos/imageset.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>imageset demo</title>
 <link rel="stylesheet" href="css/imageset.css">
-<script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
+<script src="../build/sea.js"></script>
 <script src="../build/css3.js"></script>
 <script>
 seajs.config({
