--- a/demos/index.html
+++ b/demos/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/print.css" media="print" />
 <link rel="shortcut icon" href="img/favicon.png" />
-<script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
+<script src="sea.js"></script>
 <script src="../build/css3.js"></script>
 <script>
 seajs.config({
