--- a/demos/placeholder.html
+++ b/demos/placeholder.html
@@ -5,7 +5,7 @@
 <meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <title>placeholder demo</title>
-<script src="http://cdn.staticfile.org/seajs/2.3.0/sea.js"></script>
+<script src="sea.js"></script>
 <script src="../build/css3.js"></script>
 <script>
 seajs.config({
