--- a/demos/matchmedia.html
+++ b/demos/matchmedia.html
@@ -5,7 +5,7 @@
 <meta name="renderer" content="webkit">
 <meta charset="utf-8">
 <title>matchmedia demo</title>
-<script src="sea.js"></script>
+<script src="../build/sea.js"></script>
 <script src="../build/css3.js"></script>
 <script>
 seajs.config({
