--- a/index.html
+++ b/index.html
@@ -1,51 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Css3.js by gucong3000</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/gucong3000/CSS3.js">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Css3.js</h1>
-            <h2>CSS3 polyfill</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1 class="header">Css3.js</h1>
+        <p class="header">CSS3 polyfill</p>
+
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/gucong3000/CSS3.js/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/gucong3000/CSS3.js/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/gucong3000/CSS3.js">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/gucong3000">gucong3000</a></p>
+
+
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/gucong3000/CSS3.js/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/gucong3000/CSS3.js/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <h1>
 <a id="css3js" class="anchor" href="#css3js" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CSS3.js</h1>
 
@@ -53,7 +37,7 @@
 
 <p>专治各种不服，让IE6+、Android 2.3+ 等老旧浏览器对CSS3服服帖帖</p>
 
-<p>** 注意请在http环境下使用，本地双击html打开无效 **</p>
+<p><strong>注意请web站点环境下使用，本地双击html打开无效</strong></p>
 
 <h2>
 <a id="css属性兼容" class="anchor" href="#css%E5%B1%9E%E6%80%A7%E5%85%BC%E5%AE%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>css属性兼容</h2>
@@ -192,21 +176,11 @@
 
 <div class="highlight highlight-source-js"><pre>    <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">"</span>placeholder<span class="pl-pds">"</span></span>);</pre></div>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/gucong3000">gucong3000</a> can be found on <a href="https://github.com/gucong3000/CSS3.js">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
-
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
